--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <ul>
                     <li><a href="#">home</a></li>
                     <li><a href="#">about</a></li>
+                    <li><a href="#">downloads</a></li>
                     <li><a href="#">products</a></li>
                     <li><a href="#">services</a></li>
                     <li><a href="#">contact</a></li>
